# acspsuedo

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: acs-api.yml
acspsuedo/: __init__.py  api.py  config.py  data.py  geographies.py
acspsuedo/fips/: __init__.py  _county.py  _place.py  _zcta.py  states.py
acspsuedo/fips/counties/: AK.py  AL.py  AR.py  AS.py  AZ.py  CA.py  CO.py  CT.py  DC.py  DE.py  FL.py  GA.py  GU.py  HI.py  IA.py  ID.py  IL.py  IN.py  KS.py  KY.py  LA.py  MA.py  MD.py  ME.py  MI.py  MN.py  MO.py  MP.py  MS.py  MT.py  NC.py  ND.py  NE.py  NH.py  NJ.py  NM.py  NV.py  NY.py  OH.py  OK.py  (+17 more)
acspsuedo/fips/places/: AK.py  AL.py  AR.py  AS.py  AZ.py  CA.py  CO.py  CT.py  DC.py  DE.py  FL.py  GA.py  GU.py  HI.py  IA.py  ID.py  IL.py  IN.py  KS.py  KY.py  LA.py  MA.py  MD.py  ME.py  MI.py  MN.py  MO.py  MP.py  MS.py  MT.py  NC.py  ND.py  NE.py  NH.py  NJ.py  NM.py  NV.py  NY.py  OH.py  OK.py  (+17 more)
acspsuedo/source/: __init__.py  cache.py  callables.py  exceptions.py  html_spider.py  protocols.py
crawled_html/TIGER_databases/: TIGER2002_TREE.csv  TIGER2003_TREE.csv  TIGER2008_TREE.csv  TIGER2009_TREE.csv  TIGER2012_TREE.csv  TIGER2013_TREE.csv  TIGER2014_TREE.csv  TIGER2015_TREE.csv
notebooks/: ACS5_2023.ipynb  US_scope_data.ipynb
notebooks/new_cache/geometry/: tl_2020_06_tract.dbf
tests/: test_acs5.py
utils/: __init__.py  api_metadata.py  fips.py  html_trees.py
