[project]
name = "acspsuedo"
version = "0.1.0"
description = "Objects for handling the extraction of American Community Survey data on collections of geographies."
authors = [
    {name = "Raminder Singh Dubb"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas (>=3.0.1,<4.0.0)",
    "geopandas (>=1.1.2,<2.0.0)",
    "requests (>=2.32.5,<3.0.0)",
    "aiohttp (>=3.13.3,<4.0.0)",
    "openpyxl (>=3.1.5,<4.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
